--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,6 @@ Flask
 fonttools==4.38.0
 frozenlist==1.4.1
 fsspec==2024.3.0
-
 gitdb==4.0.11
 GitPython==3.1.42
 google-auth==2.14.1
@@ -153,3 +152,4 @@ wcwidth==0.2.5
 Werkzeug==2.3.6
 yarl==1.9.4
 zipp==3.11.0
+accelerate
