--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.3.0
+accelerate==0.29.3
 aiohttp==3.9.3
 aiosignal==1.3.1
 altair==4.0.0
@@ -7,6 +8,8 @@ asttokens==2.1.0
 async-timeout==4.0.3
 attrs==23.2.0
 backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
 blinker==1.6.2
 boto3==1.26.17
 botocore==1.29.17
@@ -14,20 +17,26 @@ brotlipy==0.7.0
 cachetools==5.2.0
 certifi==2021.5.30
 charset-normalizer==3.3.2
+click==8.1.6
+conda==4.10.3
 contourpy==1.0.6
 cycler==0.11.0
 dataclasses-json==0.5.7
 decorator==5.1.1
+defusedxml==0.7.1
 distlib==0.3.7
+docopt==0.6.2
 entrypoints==0.4
 executing==1.2.0
 faiss-cpu==1.7.4
+fastjsonschema==2.19.1
 filelock==3.12.2
 fire==0.4.0
-Flask
+Flask==2.3.2
 fonttools==4.38.0
 frozenlist==1.4.1
 fsspec==2024.3.0
+futures==3.0.5
 gitdb==4.0.11
 GitPython==3.1.42
 google-auth==2.14.1
@@ -37,16 +46,25 @@ grpcio==1.50.0
 huggingface-hub==0.21.4
 importlib-metadata==5.1.0
 InstructorEmbedding==1.0.1
-ipython==8.6.0
+ipython==8.12.3
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.1
+jsonpatch==1.33
+jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter-client==8.6.1
+jupyter-core==5.7.2
+jupyterlab-pygments==0.3.0
 kiwisolver==1.4.4
-langchain==0.0.184
+langchain==0.1.17
+langchain-community==0.0.37
+langchain-core==0.1.52
+langchain-text-splitters==0.0.1
+langsmith==0.1.56
 loguru==0.7.2
 Markdown==3.4.1
 markdown-it-py==3.0.0
@@ -56,23 +74,30 @@ marshmallow-enum==1.5.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
+mistune==3.0.2
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==0.4.3
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.4
 networkx==3.2.1
-nltk
+nltk==3.8.1
 numexpr==2.9.0
 numpy==1.23.5
 oauthlib==3.2.2
 openai==0.27.6
 openapi-schema-pydantic==1.2.4
 opencv-python==4.6.0.66
-packaging==21.3
+orjson==3.10.3
+packaging==23.2
 pandas==1.5.2
+pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
+pipreqs==0.5.0
 platformdirs==3.9.1
 prompt-toolkit==3.0.33
 protobuf==3.20.3
@@ -105,7 +130,7 @@ rpds-py==0.18.0
 rsa==4.9
 s3transfer==0.6.0
 safetensors==0.4.2
-sahi
+sahi==0.11.5
 scikit-learn==1.0.2
 scipy==1.9.3
 seaborn==0.12.1
@@ -115,11 +140,12 @@ sentencepiece==0.2.0
 Shapely==1.8.5.post1
 shellingham==1.5.4
 simplejpeg==1.6.5
-sklearn
+sklearn==0.0.post7
 smmap==5.0.1
+soupsieve==2.5
 SQLAlchemy==2.0.28
 stack-data==0.6.2
-streamlit==1.17.0
+streamlit==1.34.0
 streamlit-feedback==0.1.3
 StrEnum==0.4.8
 sympy==1.12
@@ -132,14 +158,16 @@ terminaltables==3.1.10
 thop==0.1.1.post2209072238
 threadpoolctl==3.2.0
 tiktoken==0.4.0
-tokenizers==0.15.2
+tinycss2==1.2.1
+tokenizers==0.19.1
 toml==0.10.2
 toolz==0.12.1
 torch==2.0.0
+torchvision==0.10.1
 tornado==6.4
 tqdm==4.64.1
 traitlets==5.5.0
-transformers==4.38.2
+transformers==4.40.2
 trubrics==1.3.6
 typeguard==2.13.3
 typer==0.12.3
@@ -149,7 +177,8 @@ tzlocal==5.2
 validators==0.22.0
 virtualenv==20.24.2
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==2.3.6
+yarg==0.1.9
 yarl==1.9.4
 zipp==3.11.0
-accelerate
