--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,13 +1,93 @@
-streamlit==1.34.0
-python-dotenv==1.0.0
-PyPDF2==3.0.1
+absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+async-timeout==4.0.3
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+dataclasses-json==0.6.7
+faiss-cpu==1.7.4
+filelock==3.15.4
+frozenlist==1.4.1
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+huggingface-hub==0.21.4
+idna==3.7
+jinja2==3.1.4
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 langchain==0.1.17
+langchain-community==0.0.38
+langchain-core==0.1.52
+langchain-text-splitters==0.0.2
+langsmith==0.1.83
+loguru==0.7.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.4
+orjson==3.10.6
+packaging==23.2
+pandas==1.5.2
+pillow==10.4.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pydantic==2.8.2
+pydantic-core==2.20.1
+pydeck==0.9.1
+pygments==2.18.0
+pypdf2==3.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+regex==2024.5.15
+requests==2.32.3
+rich==13.7.1
+rouge-score==0.1.2
+rpds-py==0.18.1
+safetensors==0.4.3
+scikit-learn==1.0.2
+scipy==1.13.1
+sentence-transformers==2.2.2
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+SQLAlchemy==2.0.31
+streamlit==1.34.0
+sympy==1.12.1
+tenacity==8.4.2
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.0.0
+torchvision==0.15.1
+tornado==6.4.1
+tqdm==4.66.4
 transformers==4.40.2
 trubrics==1.3.6
-sentence-transformers==2.2.2
-rouge-score==0.1.2
-nltk==3.8.1
-torch==2.0.0
-pandas==1.5.2
-huggingface-hub==0.21.4
-faiss-cpu==1.7.4
+typeguard==2.13.3
+typer==0.12.3
+typing-extensions==4.12.2
+typing-inspect==0.9.0
+urllib3==2.2.2
+yarl==1.9.4
