--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,10 @@ botocore==1.29.17
 brotlipy==0.7.0
 cachetools==5.2.0
 certifi==2021.5.30
+cffi==1.16.0
 charset-normalizer==3.3.2
 ci-info==0.3.0
+click==8.1.7
 configobj==5.0.8
 configparser==7.0.0
 contourpy==1.0.6
@@ -46,6 +48,7 @@ frontend==0.0.3
 frozenlist==1.4.1
 fsspec==2024.3.0
 future==1.0.0
+futures==3.0.5
 gitdb==4.0.11
 GitPython==3.1.42
 google-auth==2.14.1
@@ -54,7 +57,8 @@ greenlet==3.0.3
 grpcio==1.50.0
 h11==0.14.0
 httplib2==0.22.0
-huggingface-hub==0.21.4
+huggingface-hub==0.24.0
+idna==3.7
 importlib-metadata==5.1.0
 InstructorEmbedding==1.0.1
 interface-meta==1.3.0
@@ -69,15 +73,15 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
+jupyter-client==8.6.1
+jupyter-core==5.7.2
+jupyterlab-pygments==0.3.0
 kiwisolver==1.4.4
-langchain==0.1.17
-langchain-community==0.0.37
-langchain-core==0.1.52
-langchain-text-splitters==0.0.1
-langsmith==0.1.56
+langchain==0.2.10
+langchain-community==0.2.9
+langchain-core==0.2.22
+langchain-text-splitters==0.2.2
+langsmith==0.1.93
 lifelines==0.28.0
 loguru==0.7.2
 looseversion==1.3.0
@@ -99,6 +103,7 @@ nbconvert==7.16.3
 nbformat==5.10.4
 networkx==3.2.1
 nibabel==5.2.1
+nipype==1.8.6
 nltk==3.8.1
 numexpr==2.9.0
 numpy==1.23.5
@@ -128,6 +133,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybboxes==0.1.5
 pycosat==0.6.3
+pycparser==2.22
 pydantic==1.10.14
 pydeck==0.8.1b0
 pydot==2.0.0
@@ -136,7 +142,7 @@ Pympler==1.0.1
 PyMuPDF==1.24.7
 PyMuPDFb==1.24.6
 pyparsing==3.0.9
-PyPDF2==3.0.1
+pypdf2==3.0.1
 pyspin==1.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -165,14 +171,15 @@ Shapely==1.8.5.post1
 shellingham==1.5.4
 simplejpeg==1.6.5
 simplejson==3.19.2
-sklearn
+six==1.16.0
+sklearn==0.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.28
 stack-data==0.6.2
 starlette==0.37.2
-streamlit==1.34.0
+streamlit==1.36.0
 streamlit-feedback==0.1.3
 StrEnum==0.4.8
 sympy==1.12
@@ -190,17 +197,19 @@ tokenizers==0.19.1
 toml==0.10.2
 toolz==0.12.1
 torch==2.2.0
+torchvision==0.17.0
 tornado==6.4
 tqdm==4.64.1
 traitlets==5.5.0
 traits==6.3.2
-transformers==4.40.2
+transformers==4.42.4
 trubrics==1.3.6
 typeguard==2.13.3
 typer==0.12.3
+typing-extensions==4.10.0
 typing-inspect==0.8.0
-typing_extensions==4.10.0
 tzlocal==5.2
+urllib3==1.26.19
 uvicorn==0.30.1
 validators==0.22.0
 virtualenv==20.24.2
