--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ frontend==0.0.3
 frozenlist==1.4.1
 fsspec==2024.3.0
 future==1.0.0
-futures==3.0.5
+futures
 gitdb==4.0.11
 GitPython==3.1.42
 google-auth==2.14.1
